# rare-disease-simulator

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: mvp.yaml
data/cache/: .gitkeep
data/fixtures/: hpo_terms.tsv  structured_profile.json  text_snippets.jsonl
data/profiles/: .gitkeep
data/raw/: .gitkeep
docs/: README.md  design.md  schemas.md  sources.md
docs/plan/: README.md  implementation_plan.md  mcrd_candidates.md
outputs/: .gitkeep
src/rare_disease_simulator/: __init__.py  cli.py  config.py  schema_export.py
src/rare_disease_simulator/data_sources/: __init__.py  fixtures.py  hpo.py  mondo.py  orphadata.py
src/rare_disease_simulator/exports/: __init__.py  graphens.py  jsonl.py  phenopacket.py
src/rare_disease_simulator/llm_extraction/: __init__.py  extractor.py  merge_patch.py  schema.py  validator.py
src/rare_disease_simulator/llm_extraction/prompts/: .gitkeep
src/rare_disease_simulator/profiles/: __init__.py  builder.py  quality.py  schema.py
src/rare_disease_simulator/simulation/: __init__.py  difficulty.py  schema.py  simulator.py
src/rare_disease_simulator/validation/: __init__.py  hpo.py  provenance.py  sanity.py
tests/: __init__.py  test_cli.py  test_config.py  test_fixtures.py  test_hpo_validation.py  test_jsonl.py  test_llm_patch_validator.py  test_merge_patch.py  test_profile_builder.py  test_profile_quality.py  test_schemas.py
tests/fixtures/: __init__.py  disease_profile.json  hpo_terms.tsv  orphadata_mini.json  profile_patch.json  readers.py  synthetic_case.json
